--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 <script src="src/import-map.6ac5e.json" type="systemjs-importmap" charset="utf-8"> </script>
 
 <script>
-    System.import('./index.1619b.js').catch(function(err) { console.error(err); })
+    System.import('./index.2d57a.js').catch(function(err) { console.error(err); })
 </script>
 
 </body>
