--- a/index.html
+++ b/index.html
@@ -41,7 +41,6 @@
   <link rel="icon" href="favicon.8de18.ico"/>
 
 
-
   <script src="https://sad.adsgram.ai/js/sad.min.js"></script>
 
   <script 
@@ -94,8 +93,7 @@
     }
   </script>
 
-
-
+  
 </head>
 <body>
   <canvas id="GameCanvas" oncontextmenu="event.preventDefault()" tabindex="0"></canvas>
@@ -105,9 +103,9 @@
     </div>
   </div>
 
-<script src="src/settings.9ebc8.js" charset="utf-8"></script>
+<script src="src/settings.73934.js" charset="utf-8"></script>
 
-<script src="main.a3ece.js" charset="utf-8"></script>
+<script src="main.f2106.js" charset="utf-8"></script>
 
 <script type="text/javascript">
 (function () {
