--- a/index.html
+++ b/index.html
@@ -92,7 +92,6 @@
       alert("Please open this game inside Telegram!");
     }
   </script>
-
   
 </head>
 <body>
@@ -103,9 +102,9 @@
     </div>
   </div>
 
-<script src="src/settings.73934.js" charset="utf-8"></script>
+<script src="src/settings.c7421.js" charset="utf-8"></script>
 
-<script src="main.f2106.js" charset="utf-8"></script>
+<script src="main.3db4c.js" charset="utf-8"></script>
 
 <script type="text/javascript">
 (function () {
